express.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/name: express-sample-service
    app.kubernetes.io/version: 0.0.2
  name: express-sample-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: express-sample-service
    app.kubernetes.io/version: 0.0.2
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/version: 0.0.2
    app.kubernetes.io/name: express-sample-service
  name: express-sample-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.2
      app.kubernetes.io/name: express-sample-service
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: <<unknown>>
      labels:
        app.kubernetes.io/version: 0.0.2
        app.kubernetes.io/name: express-sample-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: manhterry93/express-sample:1.0.1
          imagePullPolicy: IfNotPresent
          name: express-sample-service
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
