ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    # kubernetes.io/ingress.class: kong
    # konghq.com/plugins: user1-auth,rate-paid-tier,platinum-paid-tier
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-sample-service
                port:
                  number: 80
